Apply code review fixes: dedup logic, overflow, targeted regen, safety
1. [Bug] MigrateToMarkdownAction: replaced duplicated import logic
   with YamlImporter.importFiles(List<Path>) — single source of truth

2. [Bug] NaturalOrderComparator: int -> long to prevent overflow,
   with length-based fallback for >18 digit numbers

3. [Bug] SctStartupActivity: generateAll -> generateByFilePath
   for each matched path — only changed mappings regenerated

4. [Bug] YamlLensAction: IOException logging instead of silent ignore
   in buildRows, exportCsv, and findLineInFile

5. [Safety] SctFileWatcher.getMasterPaths: returns unmodifiableSet

6. [Safety] SctSettings.getMappings: returns List.copyOf (defensive copy)

7. [Edge] detectAndCast: reject NaN/Infinity from Double.parseDouble

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>